--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 
 
 
-    <script src="./Filter-Elements-from-Array.js"></script>
+    <script src="./count-the-monkeys.js"></script>
 </body>
 </html>
